.omo/evidence/controller-webhook-split-deployment/split/live-split-20260728003000/admission-mutating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T16:06:01Z"
  generation: 1
  name: echo-operator.echo-smoke-split-live-split-20260728003000.echo.example.com
  resourceVersion: "2238044"
  uid: 4ccba1fd-cc3b-44b5-9d4c-3a0f5235ce3e
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVSklsZG1LYlVPTTNDMlNjZGxaMXFycC85anBRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05aV05vYnkxemJXOXJaUzFqWVRBZUZ3MHlOakEzTWpjeE5qQTFOVGhhRncweQpOakEzTWpneE5qQTFOVGhhTUJneEZqQVVCZ05WQkFNTURXVmphRzh0YzIxdmEyVXRZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNTRGFkcDdhVnNsTHNyNEhRazFWWU1qN3p3K1JTUXdJai8KYzlpaG90WEtqcExkcXJNZCtuRENTQXZBSWNXUmVtR2xaWktCT3cyT0FqbHRUL3JSZW84UjNEV2JiTTA4ZjNmYgplS21lUDl6RVNnQm [...]
    service:
      name: echo-smoke-split-live-split-20260728003000-echo-operator
      namespace: echo-smoke-split-live-split-20260728003000
      path: /mutate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-split-live-split-20260728003000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
